--- a/src/apps/templates/platform/applications/prometheus.yaml
+++ b/src/apps/templates/platform/applications/prometheus.yaml
@@ -13,7 +13,7 @@ spec:
   source:
     chart: kube-prometheus
     helm:
-      values:
+      values: |
         prometheus:
           ingress:
             enabled: true
