--- a/src/apps/templates/platform/applications/prometheus.yaml
+++ b/src/apps/templates/platform/applications/prometheus.yaml
@@ -20,6 +20,12 @@ spec:
             hostname: prometheus.jeancloude.club
             annotations:
               external-dns.alpha.kubernetes.io/hostname: prometheus.jeancloude.club
+            additionalScrapeConfigs:
+              enabled: true
+              type: external
+              external:
+                name: additional-scrape-configs
+                key: configs
     repoURL: https://charts.bitnami.com/bitnami
     targetRevision: 6.6.1
   syncPolicy:
