--- a/src/apps/templates/jeancloude.club/applications/nextcloud.yaml
+++ b/src/apps/templates/jeancloude.club/applications/nextcloud.yaml
@@ -149,6 +149,6 @@ spec:
   syncPolicy:
     automated:
       prune: true
-      selfHeal: true
+      selfHeal: false
     syncOptions:
       - CreateNamespace=true
