--- a/src/apps/templates/jeancloude.club/applications/rocketchat.yaml
+++ b/src/apps/templates/jeancloude.club/applications/rocketchat.yaml
@@ -32,6 +32,6 @@ spec:
   syncPolicy:
     automated:
       prune: true
-      selfHeal: true
+      selfHeal: false
     syncOptions:
       - CreateNamespace=true
