--- a/src/applications/prometheus/application.yaml
+++ b/src/applications/prometheus/application.yaml
@@ -6,7 +6,7 @@ metadata:
   finalizers:
   - resources-finalizer.argocd.argoproj.io
   annotations:
-    argocd.argoproj.io/sync-wave: "1"
+    argocd.argoproj.io/sync-wave: "20"
 spec:
   destination:
     server: https://kubernetes.default.svc
@@ -19,9 +19,9 @@ spec:
         prometheus:
           ingress:
             enabled: true
-            hostname: prometheus.jeancloude.club
+            hostname: prometheus.pastis-hosting.net
             annotations:
-              external-dns.alpha.kubernetes.io/hostname: prometheus.jeancloude.club
+              external-dns.alpha.kubernetes.io/hostname: prometheus.pastis-hosting.net
           additionalScrapeConfigs:
             enabled: true
             type: external
