refactor: on utilise uniquement le projet "default"

--- a/src/applications/argocd/application.yaml
+++ b/src/applications/argocd/application.yaml
@@ -12,7 +12,7 @@ spec:
     chart: argo-cd
     server: https://kubernetes.default.svc
     namespace: platform-argocd
-  project: platform
+  project: default
   source:
     helm:
       values: |
