--- a/src/applications/traefik/application.yaml
+++ b/src/applications/traefik/application.yaml
@@ -11,7 +11,7 @@ spec:
   destination:
     server: https://kubernetes.default.svc
     namespace: platform-traefik
-  project: platform
+  project: default
   source:
     chart: traefik
     helm:
