traefik in applicationset

--- a/src/application-set.yaml
+++ b/src/application-set.yaml
@@ -21,6 +21,8 @@ spec:
         chart: '{{ helm.chart }}'
         repoURL: '{{ helm.repoURL }}'
         targetRevision: '{{ helm.targetRevision }}'
+        helm:
+          values: '{{ helm.values }}'
       syncPolicy:
         automated:
           prune: true
