--- a/src/applications/prometheus/config.yaml
+++ b/src/applications/prometheus/config.yaml
@@ -1,7 +1,7 @@
 helm:
   chart: kube-prometheus
-  repoURL: https://charts.kasten.io/
-  targetRevision: 6.6.1
+  repoURL: https://charts.bitnami.com/bitnami
+  targetRevision: 6.6.2
   values: |
     prometheus:
       ingress:
