kasten ingress host

--- a/src/applications/kasten/config.yaml
+++ b/src/applications/kasten/config.yaml
@@ -18,6 +18,7 @@ helm:
     clusterName: Icekubes
     ingress:
       create: true
+      host: kasten.pastis-hosting.net
       annotations:
         external-dns.alpha.kubernetes.io/hostname: kasten.pastis-hosting.net
     prometheus:
