Revert "values.yaml"
This reverts commit 5ec58bf9179547a898473f0a6eeb7cd914492f79.

--- a/src/application-set.yaml
+++ b/src/application-set.yaml
@@ -22,8 +22,7 @@ spec:
         repoURL: '{{ helm.repoURL }}'
         targetRevision: '{{ helm.targetRevision }}'
         helm:
-          valueFiles:
-            - values.yaml
+          values: '{{ helm.values }}'
       syncPolicy:
         automated:
           prune: true
