--- a/src/application-set-git.yaml
+++ b/src/application-set-git.yaml
@@ -29,4 +29,4 @@ spec:
           - CreateNamespace=true
       destination:
         server: https://kubernetes.default.svc
-        namespace: test-'{{ path.basename }}'
+        namespace: '{{ path.basename }}'
