--- a/src/apps/traefik/templates/dashboard.yaml
+++ b/src/apps/traefik/templates/dashboard.yaml
@@ -12,7 +12,7 @@ spec:
   entryPoints:
     - web
   routes:
-    - match: Host(`traefik.pastis-hosting.net`) && (PathPrefix(`/dashboard`) || PathPrefix(`/api`))
+    - match: Host(`trfk.pastis-hosting.net`) && (PathPrefix(`/dashboard`) || PathPrefix(`/api`))
       kind: Rule
       services:
         - name: api@internal
