--- a/src/apps/traefik/templates/dashboard.yaml
+++ b/src/apps/traefik/templates/dashboard.yaml
@@ -1,13 +1,10 @@
 apiVersion: traefik.containo.us/v1alpha1
 kind: IngressRoute
 metadata:
-  name: dashboard
-  namespace: traefik
   labels:
-    app.kubernetes.io/component: traefik
-    app.kubernetes.io/instance: traefik
-    app.kubernetes.io/name: traefik
-    argocd.argoproj.io/instance: traefik
+{{ include "helm.labels" . | indent 4 }}
+  namespace: {{ .Release.Namespace }}
+  name: {{ .Release.Name }}-dashboard
 spec:
   entryPoints:
     - web
