--- a/src/apps/traefik/templates/ingress.yaml
+++ b/src/apps/traefik/templates/ingress.yaml
@@ -4,7 +4,7 @@ metadata:
   labels:
 {{ include "helm.labels" . | indent 4 }}
   namespace: {{ .Release.Namespace }}
-  name: {{ .Release.Name }}-dashboard
+  name: {{ .Release.Name }}-ingress
   annotations:
     external-dns.alpha.kubernetes.io/hostname: trfk.pastis-hosting.net
 spec:
