--- a/src/apps/k10/templates/clusters/icekubes/profiles/location/de.yaml
+++ b/src/apps/k10/templates/clusters/icekubes/profiles/location/de.yaml
@@ -17,7 +17,7 @@ spec:
     objectStore:
       endpoint: https://s3.de.cloud.ovh.net
       name: net.pastis-hosting.icekubes
-      path: kasten
+      path: k10
       objectStoreType: S3
       pathType: Directory
       region: DE
