--- a/src/applications/k10-config/templates/policies/system-reports.yaml
+++ b/src/applications/k10-config/templates/policies/system-reports.yaml
@@ -3,7 +3,7 @@ kind: Policy
 metadata:
   labels:
 {{ include "helm.labels" . | indent 4 }}
-  namespace: {{ .Release.Namespace }}
+  namespace: k10
   name: {{ .Release.Name }}-system-reports-policy
 spec:
   actions:
