--- a/src/applications/k10-config/templates/secrets/openstack.yaml
+++ b/src/applications/k10-config/templates/secrets/openstack.yaml
@@ -3,7 +3,7 @@ kind: Secret
 metadata:
   labels:
 {{ include "helm.labels" . | indent 4 }}
-  namespace: {{ .Release.Namespace }}
+  namespace: k10
   name: {{ .Release.Name }}-icekubes-openstack
 data:
   os_domain: RGVmYXVsdA==
