--- a/src/applications/argocd/values.yaml
+++ b/src/applications/argocd/values.yaml
@@ -2,6 +2,8 @@ argo-cd:
   installCRDs: true
   dex:
     enabled: true
+  repoServer:
+    extraArgs: [--parallelslimit=3]
   server:
     extraArgs:
       - --insecure
