--- a/src/applications/argocd/values.yaml
+++ b/src/applications/argocd/values.yaml
@@ -2,8 +2,6 @@ argo-cd:
   installCRDs: true
   dex:
     enabled: true
-  repoServer:
-    extraArgs: [--parallelslimit=3]
   server:
     extraArgs:
       - --insecure
@@ -13,12 +11,12 @@ argo-cd:
           name: stable
           url: https://charts.helm.sh/stable
       url: https://argocd.pastis-hosting.net
-      oidc.config: |
-        name: Keycloak
-        issuer: https://keycloak.pastis-hosting.net/auth/realms/pastis-hosting.net
-        clientID: argocd
-        clientSecret: $oidc.keycloak.clientSecret
-        requestedScopes: ["openid", "profile", "email", "groups"]
+      # oidc.config: |
+      #   name: Keycloak
+      #   issuer: https://keycloak.pastis-hosting.net/auth/realms/pastis-hosting.net
+      #   clientID: argocd
+      #   clientSecret: $oidc.keycloak.clientSecret
+      #   requestedScopes: ["openid", "profile", "email", "groups"]
     ingress:
       enabled: true
       hosts:
