--- a/src/applications/argocd/values.yaml
+++ b/src/applications/argocd/values.yaml
@@ -4,8 +4,8 @@ argo-cd:
     enabled: false
   repoServer:
     extraArgs:
-      - --parallelismlimit
-      - 10
+      - '--parallelismlimit'
+      - '10'
   server:
     extraArgs:
       - --insecure
