keycloak fix realms configmap name

--- a/src/applications/keycloak/values.yaml
+++ b/src/applications/keycloak/values.yaml
@@ -9,7 +9,7 @@ keycloak:
   extraVolumes:
     - name: config
       configMap:
-        name: realms
+        name: "{{ .Release.Name }}-realms-cm"
         items:
         - key: "realms.json"
           path: "realms.json"
