--- a/src/applications/k10/values.yaml
+++ b/src/applications/k10/values.yaml
@@ -13,7 +13,7 @@ k10:
     oidcAuth:
       enabled: true
       providerURL: https://keycloak.pastis-hosting.net/auth/realms/pastis-hosting.net
-      scopes: profile email
+      scopes: email groups profile
       clientID: k10
       clientSecret: Z93q0Sl0d3OIBU0XITmtgphuibtbvf20
       usernameClaim: email
