--- a/src/applications/traefik/Chart.yaml
+++ b/src/applications/traefik/Chart.yaml
@@ -26,3 +26,7 @@ dependencies:
 - name: traefik
   version: 10.6.2
   repository: https://helm.traefik.io/traefik
+
+- name: traefik-forward-auth
+  version: 1.0.10
+  repository: https://k8s-at-home.com/charts/
