--- a/src/applications/traefik/values.yaml
+++ b/src/applications/traefik/values.yaml
@@ -14,3 +14,27 @@ traefik:
     - "--entryPoints.web.forwardedHeaders.insecure=true"
     - "--entryPoints.websecure.proxyProtocol.insecure=true"
     - "--entryPoints.websecure.forwardedHeaders.insecure=true"
+
+traefik-forward-auth:
+  # secret -- Secret used for signing. If empty, one will be generated. If specifying your own in env use "-"
+  secret: ""
+
+  providers:
+    oidc:
+      # providers.oidc.enabled -- Enable the generic OIDC provider
+      enabled: true
+      # providers.oidc.issuerUrl -- Issuer URL
+      issuerUrl: "https://keycloak.pastis-hosting.net/auth/realms/pastis-hosting.net"
+      # providers.oidc.clientId -- Client ID
+      clientId: "traefik"
+      # providers.oidc.clientSecret -- Client Secret
+      clientSecret: "blpGQIb6ccCZgc1D8ZFYbSIxu1l9nA09"
+
+  ingress:
+    enabled: true
+    annotations:
+      external-dns.alpha.kubernetes.io/hostname: argocd.pastis-hosting.net
+    hosts:
+      - host: trfk-auth.pastis-hosting.net
+        paths:
+          - /
